<resources>
    <string name="app_name">Authantication</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="already_have_an_account">Already Have An Account ?</string>
</resources>